--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "my-project",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
   "dependencies": {
-    "sweetalert": "^2.1.2"
+    "framer-motion": "^11.2.9",
+    "gsap": "^3.12.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.0",
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.0.0",
+    "vite": "^2.0.0"
   }
 }
